--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,19 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --color-primary: #7AE2CF;
+  --color-secondary: #077A7D;
+  --color-tertiary: #F5EEDD;
+  --color-text: #06202B;
+
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+
+
+.nav-icons {
+  @apply hover:text-secondary text-text/100 transition-colors ease-linear duration-300;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+button {
+  @apply cursor-pointer transition-colors ease-in-out duration-300 shadow-lg hover:shadow-xl hover:scale-[1.03] relative;
 }
